--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Bienvenido {{ title }}!
-  </h1>
-  <img width="300" alt="Angular Logo" [src]="logo">
-</div>
 
+<div class="container">
+  <header class="row align-items-center">
+    <div class="col-10">
+      <h1>
+        Bienvenido {{ title }}!
+      </h1>
+    </div>
+    <div class="col-2">
+      <img class="img-fluid" alt="Angular Logo" [src]="logo"> 
+    </div>
+    
+  </header>
+</div>
 <router-outlet></router-outlet>
