--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div class="container">
-  <header class="row align-items-center">
-    <div class="col-10">
-      <h1>
-        Bienvenido {{ title }}!
-      </h1>
-    </div>
-    <div class="col-2">
-      <img class="img-fluid" alt="Angular Logo" [src]="logo"> 
-    </div>
-    
-  </header>
-</div>
-<router-outlet></router-outlet>
+<kc-header></kc-header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
+
+<kc-footer></kc-footer>
