Creamos menu de navegacion con bootstrap dentro de header.component.hmtl

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,5 +9,7 @@
       <img class="img-fluid" alt="Angular Logo" [src]="logo">
     </div>
 
+    <kc-menu class="row"></kc-menu> 
+
   </header>
 </div>
