--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,3 +1,7 @@
-<p>
-  menu works!
-</p>
+<nav class="nav justify-content-center">
+  <a class="nav-link" href="#">Inicio</a>
+  <a class="nav-link" href="#">Tareas</a>
+  <a class="nav-link" href="#">Contactos</a>
+  <a class="nav-link" href="#">Libros</a>
+  <a class="nav-link" href="#">About</a>
+</nav>
