Realizamos primero el enrutamiento y luego un sistema de doble binding

--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="nav justify-content-center">
-  <a class="nav-link" href="#">Inicio</a>
-  <a class="nav-link" href="#">Tareas</a>
-  <a class="nav-link" href="#">Contactos</a>
-  <a class="nav-link" href="#">Libros</a>
-  <a class="nav-link" href="#">About</a>
+  <a class="nav-link" [routerLink]="'inicio'" routerLinkActive="active">Inicio</a>
+  <a class="nav-link" [routerLink]="'tareas'" routerLinkActive="active">Tareas</a>
+  <a class="nav-link" [routerLink]="'contactos'" routerLinkActive="active">Contactos</a>
+  <a class="nav-link" [routerLink]="'libros'" routerLinkActive="active">Libros</a>
+  <a class="nav-link" [routerLink]="'about'" routerLinkActive="active">About</a>
 </nav>
